--- a/src/scss/rent-gear.scss
+++ b/src/scss/rent-gear.scss
@@ -7,6 +7,8 @@
     }
   }
   .rent-gear-body{
+    margin-bottom: 3rem;
+    // CSS for sidebar component
     .sidebar{
       padding: 10px 0;
       background-color: $gray-lighten;
@@ -47,19 +49,25 @@
         }
       }
     }
+    // CSS for main component
     .main-wrapper{
-      display: flex;
-      padding: 10px 0;
       padding-left: 30px;
+      .main_head{
+        div{
+          display: flex;
+          align-items: center;
+        }
+        margin-bottom: 20px;
+      }
       .search{
         flex:3;
         .theme-form{
+          margin: 0;
           display: flex;
           align-items: flex-end;
           height: 100%;
-          margin-top: 0;
-          align-items: flex-end;
           max-width: 800px;
+          width: 100%;
           .location-input {
             flex: 1;
             margin-right: 15px;
@@ -76,15 +84,15 @@
         flex:1;
         display: flex;
         justify-content: center;
+        border: none;
         .card-view , .list-view , .table-view{
           display: flex;
           justify-content: center;
           align-items: center;
-          margin-left: 10px;
-          width:50px;
-          height: 50px;
-          background-color: $primary-color;
-          color :$white;
+          width:40px;
+          height: 40px;
+          border :1px solid $primary-color;
+          color :$primary-color;
           .fa{
             font-size: 1.3rem;
           }
@@ -96,6 +104,86 @@
           .fa:first-child{
             padding-top:8px;
             line-height: 0;
+          }
+        }
+        .nav-item{
+          margin-right: 8px;
+          .nav-link{
+            padding: 0;
+            border : none;
+          }
+          .active {
+            background-color: $primary-color;
+            .fa{
+              color: $white;
+            }
+          }
+        }
+      }
+      
+      .card_view{
+        border: none;
+        background-color: $gray-light;
+        margin-bottom: 1.5rem;
+        position: relative;
+        transition: all 0.6s ease-in-out;
+        .card-body{
+          padding: 0;
+          text-align: center;
+          .card-title{
+            border-bottom:0.5px solid #ddd;
+            padding: 10px;
+            text-transform: uppercase;
+            font-size: 0.9rem;
+            margin: 0;
+          }
+          .card-subtitle{
+            border-bottom:0.5px solid #ddd;
+            font-size: 0.7rem;
+            padding: 15px 10px 10px;
+            font-weight: 100;
+            .stars{
+              color:$primary-color;
+            }
+            .fa-map-marker{
+              color:$primary-color;
+            }
+          }
+          .card-text{
+            margin: 0;
+            padding: 15px;
+            .price{
+              font-size: 1.5rem;
+              font-weight: bold;
+            }
+          }
+          .buttons{
+            display: none;
+            position: absolute;
+            bottom: -35px;
+            z-index: 444;
+            left: 0;
+            width:100%;
+            .cart{
+              width:80%;
+              border-radius: 0;
+              background-color: $primary-color;
+              border: none;
+              color:$white;
+            }
+            .fav{
+              width:20%;
+              border: none;
+              border-radius: 0;
+              background-color: #f9ebf0;
+              color: $primary-color;
+            }
+          }
+        }
+        &:hover{
+          transition: all 0.6s ease-in-out;
+          .buttons{
+            display:block;
           }
         }
       }
