--- a/src/scss/addgear.scss
+++ b/src/scss/addgear.scss
@@ -99,8 +99,6 @@
     flex-direction: column;
     border: 1px solid lightgray;
     min-height: 300px;
-    align-items: center;
-    justify-content: center;
     width: 100%;
     max-width: 600px;
     margin: 15px;
@@ -150,6 +148,7 @@
       display: flex;
       button {
         width: auto;
+        min-width: auto;
       }
 
       .theme-btn-primary {
@@ -174,6 +173,33 @@
     .flex-row {
       justify-content: space-around;
       width: 100%;
+    }
+  }
+
+  .add-gear-images {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    .add-gear-image, .add-gear-addimage {
+      height: 100px;
+      width: 100px;
+      border: 1px solid lightgray;
+      margin: 0 10px 10px 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+
+      img {
+        width: 100%;
+      }
+    }
+
+    .add-gear-addimage {
+      i {
+        font-size: 30px;
+        color: $primary-color;
+      }
     }
   }
 }
