--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -220,3 +220,19 @@ a, a:hover {
   margin-left: 15px;
   cursor: pointer;
 }
+
+.file-input-container {
+  position: relative;
+  input[type="file"] {
+    opacity: 0;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+  }
+}
+
+img {
+  object-fit: contain;
+}
