--- a/src/scss/custom-carousel.scss
+++ b/src/scss/custom-carousel.scss
@@ -1,7 +1,12 @@
 .gear-carousel {
   width: 100%;
 
+  .carousel-item {
+    height: 200px;
+    overflow: hidden;
+  }
+
   img {
-    width: 100%;
+    height: 100%;
   }
 }
