--- a/src/scss/rent-gear.scss
+++ b/src/scss/rent-gear.scss
@@ -127,6 +127,10 @@
         margin-bottom: 1.5rem;
         position: relative;
         transition: all 0.6s ease-in-out;
+        .card-img-top{
+          padding: 10px;
+          height: 200px;
+        }
         .card-body{
           padding: 0;
           text-align: center;
@@ -202,6 +206,7 @@
           align-items: center;
           .card-img-top{
             padding: 10px;
+            height: 180px;
           }
         }
         .card-body{
@@ -292,6 +297,7 @@
           align-items: center;
           .card-img-top{
             padding: 10px;
+            height: 100px;
           }
         }
         .card-body{
