--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -55,7 +55,6 @@
 
       button {
         width: auto;
-        pointer-events: none;
       }
     }
 
@@ -167,7 +166,7 @@
 
       }
     }
-    
+
     .block-el{
       // .block-content{
       //   display: flex;
@@ -184,16 +183,16 @@
       //     height:100px;
       //     margin: 0;
       //   }
-      //   div.desc{ 
+      //   div.desc{
       //     flex:1;
       //     display: flex;
       //     justify-content: center;
       //     flex-direction: column;
       //   }
-      //   #camera{          
+      //   #camera{
       //     background-image: url('/images/Icons/catogories/1 (1).jpg');
       //     background-repeat:no-repeat;
-      //     background-position: center;  
+      //     background-position: center;
       //     -webkit-transition: all 0.3s ease-in-out;
       //       -moz-transition: all 0.3s ease-in-out;
       //       -o-transition: all 0.3s ease-in-out;
@@ -206,42 +205,42 @@
       //   #drones{
       //     background-image: url('/images/Icons/catogories/1 (3).jpg');
       //     background-repeat:no-repeat;
-      //     background-position: center;          
+      //     background-position: center;
       //   }
       //   #lenses{
       //     background-image: url('/images/Icons/catogories/1 (4).jpg');
       //     background-repeat:no-repeat;
-      //     background-position: center;          
+      //     background-position: center;
       //   }
       //   #lighting{
       //     background-image: url('/images/Icons/catogories/1 (5).jpg');
       //     background-repeat:no-repeat;
-      //     background-position: center;          
+      //     background-position: center;
       //   }
       //   #audio{
       //     background-image: url('/images/Icons/catogories/1 (6).jpg');
       //     background-repeat:no-repeat;
-      //     background-position: center;          
+      //     background-position: center;
       //   }
       //   #tripods_stabilization_rigs{
       //     background-image: url('/images/Icons/catogories/1 (7).jpg');
       //     background-repeat:no-repeat;
-      //     background-position: center;          
+      //     background-position: center;
       //   }
       //   #camera_accessories{
       //     background-image: url('/images/Icons/catogories/1 (8).jpg');
       //     background-repeat:no-repeat;
-      //     background-position: center;          
+      //     background-position: center;
       //   }
       //   #studio_spaces{
       //     background-image: url('/images/Icons/catogories/1 (9).jpg');
       //     background-repeat:no-repeat;
-      //     background-position: center;          
+      //     background-position: center;
       //   }
       //   #office_spaces{
       //     background-image: url('/images/Icons/catogories/1 (10).jpg');
       //     background-repeat:no-repeat;
-      //     background-position: center;          
+      //     background-position: center;
       //   }
       //   #others{
       //     background-image: url('/images/Icons/catogories/1 (11).jpg');
@@ -261,35 +260,35 @@
       //     button{
       //     display: block;
       //     }
-      //     #camera{          
+      //     #camera{
       //       background-image: url('/images/Icons/catogories/1 (12).jpg');
       //     }
       //     #computer_electronic{
       //         background-image: url('/images/Icons/catogories/1 (13).jpg');
       //       }
       //     #drones{
-      //       background-image: url('/images/Icons/catogories/1 (14).jpg');         
+      //       background-image: url('/images/Icons/catogories/1 (14).jpg');
       //     }
       //     #lenses{
-      //       background-image: url('/images/Icons/catogories/1 (15).jpg');         
+      //       background-image: url('/images/Icons/catogories/1 (15).jpg');
       //     }
       //     #lighting{
-      //       background-image: url('/images/Icons/catogories/1 (16).jpg');         
+      //       background-image: url('/images/Icons/catogories/1 (16).jpg');
       //     }
       //     #audio{
-      //       background-image: url('/images/Icons/catogories/1 (17).jpg');         
+      //       background-image: url('/images/Icons/catogories/1 (17).jpg');
       //     }
       //     #tripods_stabilization_rigs{
-      //       background-image: url('/images/Icons/catogories/1 (18).jpg');         
+      //       background-image: url('/images/Icons/catogories/1 (18).jpg');
       //     }
       //     #camera_accessories{
-      //       background-image: url('/images/Icons/catogories/1 (19).jpg');          
+      //       background-image: url('/images/Icons/catogories/1 (19).jpg');
       //     }
       //     #studio_spaces{
-      //       background-image: url('/images/Icons/catogories/1 (20).jpg');          
+      //       background-image: url('/images/Icons/catogories/1 (20).jpg');
       //     }
       //     #office_spaces{
-      //       background-image: url('/images/Icons/catogories/1 (21).jpg');          
+      //       background-image: url('/images/Icons/catogories/1 (21).jpg');
       //     }
       //     #others{
       //       background-image: url('/images/Icons/catogories/1 (22).jpg');
@@ -328,7 +327,7 @@
   padding: 30px;
   margin: 10px;
   float: left;
-  
+
 }
 .block-el:hover .block-bg{
   background-color: $primary-color;
@@ -340,35 +339,35 @@
   button{
     display: block;
   }
-  #camera{          
+  #camera{
     background-image: url('/images/Icons/catogories/1 (12).jpg');
   }
   #computer_electronic{
       background-image: url('/images/Icons/catogories/1 (13).jpg');
     }
   #drones{
-    background-image: url('/images/Icons/catogories/1 (14).jpg');         
+    background-image: url('/images/Icons/catogories/1 (14).jpg');
   }
   #lenses{
-    background-image: url('/images/Icons/catogories/1 (15).jpg');         
+    background-image: url('/images/Icons/catogories/1 (15).jpg');
   }
   #lighting{
-    background-image: url('/images/Icons/catogories/1 (16).jpg');         
+    background-image: url('/images/Icons/catogories/1 (16).jpg');
   }
   #audio{
-    background-image: url('/images/Icons/catogories/1 (17).jpg');         
+    background-image: url('/images/Icons/catogories/1 (17).jpg');
   }
   #tripods_stabilization_rigs{
-    background-image: url('/images/Icons/catogories/1 (18).jpg');         
+    background-image: url('/images/Icons/catogories/1 (18).jpg');
   }
   #camera_accessories{
-    background-image: url('/images/Icons/catogories/1 (19).jpg');          
+    background-image: url('/images/Icons/catogories/1 (19).jpg');
   }
   #studio_spaces{
-    background-image: url('/images/Icons/catogories/1 (20).jpg');          
+    background-image: url('/images/Icons/catogories/1 (20).jpg');
   }
   #office_spaces{
-    background-image: url('/images/Icons/catogories/1 (21).jpg');          
+    background-image: url('/images/Icons/catogories/1 (21).jpg');
   }
   #others{
     background-image: url('/images/Icons/catogories/1 (22).jpg');
@@ -392,16 +391,16 @@
     height:100px;
     margin: 0;
   }
-  div.desc{ 
+  div.desc{
     flex:1;
     display: flex;
     justify-content: center;
     flex-direction: column;
   }
-  #camera{          
+  #camera{
     background-image: url('/images/Icons/catogories/1 (1).jpg');
     background-repeat:no-repeat;
-    background-position: center; 
+    background-position: center;
   }
    #computer_electronic{
     background-image: url('/images/Icons/catogories/1 (2).jpg');
@@ -410,42 +409,42 @@
   #drones{
     background-image: url('/images/Icons/catogories/1 (3).jpg');
     background-repeat:no-repeat;
-    background-position: center;          
+    background-position: center;
   }
   #lenses{
     background-image: url('/images/Icons/catogories/1 (4).jpg');
     background-repeat:no-repeat;
-    background-position: center;          
+    background-position: center;
   }
   #lighting{
     background-image: url('/images/Icons/catogories/1 (5).jpg');
     background-repeat:no-repeat;
-    background-position: center;          
+    background-position: center;
   }
   #audio{
     background-image: url('/images/Icons/catogories/1 (6).jpg');
     background-repeat:no-repeat;
-    background-position: center;          
+    background-position: center;
   }
   #tripods_stabilization_rigs{
     background-image: url('/images/Icons/catogories/1 (7).jpg');
     background-repeat:no-repeat;
-    background-position: center;          
+    background-position: center;
   }
   #camera_accessories{
     background-image: url('/images/Icons/catogories/1 (8).jpg');
     background-repeat:no-repeat;
-    background-position: center;          
+    background-position: center;
   }
   #studio_spaces{
     background-image: url('/images/Icons/catogories/1 (9).jpg');
     background-repeat:no-repeat;
-    background-position: center;          
+    background-position: center;
   }
   #office_spaces{
     background-image: url('/images/Icons/catogories/1 (10).jpg');
     background-repeat:no-repeat;
-    background-position: center;          
+    background-position: center;
   }
   #others{
     background-image: url('/images/Icons/catogories/1 (11).jpg');
@@ -486,4 +485,10 @@
     -webkit-transform: skewX(15deg) translateX(-35px);
     transform: skewX(15deg) translateX(-35px);
     background-color: #ffff;
+}
+
+.search-results-container {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
 }
